deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app-deployment
  namespace: mominur
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-app
  template:
    metadata:
      labels:
        app: chat-app
    spec:
      containers:
      - name: chat-app-container
        image: mominur2804/chat-app:latest
        ports:
        - containerPort: 3000
