ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-app-ingress
  namespace: mominur
spec:
  rules:
  - host: chat-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chat-app-service
            port:
              number: 3000
